# cmake-dlldep

./: .gitignore  CMakeLists.txt  README.md  ci.ps1  cmake.yml  lowest.cpp  middle.cpp  program.cpp  validate.ps1
.github/workflows/: cmake.yml
DLL/: CMakeLists.txt  dll.cpp
